--- a/Client/app/src/pages/ProgressBar.css
+++ b/Client/app/src/pages/ProgressBar.css
@@ -20,4 +20,23 @@
   padding: 0 10px;
 }
 
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 200px;
+}
+
+.no-courses-container {
+  display: flex;
+  justify-content: center;   
+  align-items: center;       
+  height: 500px;             
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+  font-size: x-large;
+  color: #0033A0;
+}
+
 
